# github-action-automate-pre-release

./: .gitignore  Makefile  README.md  action.yml  pyproject.toml
scripts/: wg-src-tmp
src/: __init__.py  main.py
tests/: test_src.py
